- add change theme option. - add change username option. - add hiding side panel
